[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

authors = ["kaylendog (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
dotenv = "0.15"
juniper = "0.15"
juniper_warp = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
warp = "0.3"

furink-proto = { git = "https://github.com/furinkapp/proto-rust.git", branch = "main" }
