[package]
name = "gateway_decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
js-sys = "0.3"
bincode = "1"

gateway_protocol = { path = "../gateway_protocol" }

[lib]
crate-type = ["cdylib"]
